--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,38 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "cocktails";
+@import "doses";
+@import "ingredients";
+
+
+body {
+  background-color: $background;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  // font-family: $body-font;
+  margin: 0;
+  color: $light-gray;
+}
+
+.writing {
+  font-size: 72px;
+}
+
+div {
+  margin: 0;
+}
+
+form {
+font-size: 72px;
+}
+
+a {
+  // font-family: $body-font;
+
+  &:hover {
+  text-decoration: none;
+  }
+}
