--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,13 @@
 
 // For example:
 $red: #FD1015;
-$blue: #167FFB;
+$blue: #82EEF9;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$pink: #e064d2;
+$dark-blue: #0B0F24;
+$background: #191919;
+
