front end working

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -11,15 +11,15 @@
   align-items: center;
   border-bottom: 1px solid white;
   width: 100%;
-  background-color: $background;
+  background-color: #191919;
   color: white;
   position: sticky;
   top: 0;
   overflow: visible;
 
     h1 {
-      color: $light-gray;
-      font-family: $button-font;
+      color: #F4F4F4;
+      font-family: 'Yellowtail', cursive;
       padding: 8px;
       margin: 0;
 
