--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,10 +3,10 @@
   align-items: center;
   justify-content: center;
   padding: 8px 24px;
-  background-color: $background;
+  background-color: #191919;
   transition: .3s;
-  color: white;
-  font-family: $button-font;
+  color: #F4F4F4;
+  font-family: 'Hind Siliguri', sans-serif;
   font-size: 1.3rem;
 
 
