--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // Graphical variables
+
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
@@ -8,23 +9,46 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
 @import "cocktails";
 @import "doses";
-@import "ingredients";
+
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Yellowtail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;700&display=swap');
+
+
+// Define fonts for body and headers
+$body-font: 'Yellowtail', cursive;
+$headers-font: "Nunito", "Helvetica", "sans-serif";
+$button-font:  'Hind Siliguri', sans-serif;
+
+$red: #FD1015;
+$blue: #82EEF9;
+$yellow: #FFC65A;
+$orange: #E67E22;
+$green: #1EDD88;
+$gray: #0E0000;
+$light-gray: #F4F4F4;
+$pink: #e064d2;
+$dark-blue: #0B0F24;
+$base: #191919;
+
 
 
 body {
-  background-color: $background;
+  background-color: #191919;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   // font-family: $body-font;
   margin: 0;
-  color: $light-gray;
+  color: #F4F4F4;
 }
 
 .writing {
@@ -46,3 +70,61 @@ a {
   text-decoration: none;
   }
 }
+
+// cards
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 300px;
+  height: 300px;
+  padding: 20px;
+  border-radius: 16px;
+  background: #f7f4f4;
+  font-family: 'Hind Siliguri', sans-serif;
+  color: gray;
+  transition: 150ms linear;
+  letter-spacing: 2px;
+
+
+  &:hover {
+   text-decoration: none;
+   width: 305px;
+   height: 305px;
+  }
+}
+
+.cards {
+
+  h2 {
+    font-family: 'Hind Siliguri', sans-serif;
+    color: #191919;
+  }
+}
+
+.image {
+  height: 70%;
+  border-bottom: 1px solid #191919;
+}
+
+//button
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 24px;
+  background-color: #191919;
+  transition: .3s;
+  color: #F4F4F4;
+  font-family: 'Hind Siliguri', sans-serif;
+  font-size: 1.3rem;
+
+
+    &:hover {
+      opacity: 1;
+      text-decoration: none;
+      color: white;
+    }
+}
+
