--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back to cocktail', cocktail_path(@cocktail), class: 'button' %>
 
 <%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.association :ingredient, class: 'select2' %>
+  <%= f.association :ingredient %>
   <%= f.input :description %>
   <%= f.button :submit, class: 'button', id: 'modify' %>
 <% end %>
