--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,28 +27,17 @@ $body-font: 'Yellowtail', cursive;
 $headers-font: "Nunito", "Helvetica", "sans-serif";
 $button-font:  'Hind Siliguri', sans-serif;
 
-$red: #FD1015;
-$blue: #82EEF9;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
-$pink: #e064d2;
-$dark-blue: #0B0F24;
-$base: #191919;
-
 
 
 body {
-  background-color: #191919;
+  background-color: $base;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   // font-family: $body-font;
   margin: 0;
-  color: #F4F4F4;
+  color: $light-gray;
 }
 
 .writing {
@@ -69,62 +58,5 @@ a {
   &:hover {
   text-decoration: none;
   }
-}
-
-// cards
-.cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 300px;
-  height: 300px;
-  padding: 20px;
-  border-radius: 16px;
-  background: #f7f4f4;
-  font-family: 'Hind Siliguri', sans-serif;
-  color: gray;
-  transition: 150ms linear;
-  letter-spacing: 2px;
-
-
-  &:hover {
-   text-decoration: none;
-   width: 305px;
-   height: 305px;
-  }
-}
-
-.cards {
-
-  h2 {
-    font-family: 'Hind Siliguri', sans-serif;
-    color: #191919;
-  }
-}
-
-.image {
-  height: 70%;
-  border-bottom: 1px solid #191919;
-}
-
-//button
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 8px 24px;
-  background-color: #191919;
-  transition: .3s;
-  color: #F4F4F4;
-  font-family: 'Hind Siliguri', sans-serif;
-  font-size: 1.3rem;
-
-
-    &:hover {
-      opacity: 1;
-      text-decoration: none;
-      color: white;
-    }
 }
 
