--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <div class="banner">
-  <%=  image_tag 'background.jpeg', id: 'background'%>
+  <%=  image_tag 'background.jpg', id: 'background'%>
 </div>
 
 <div class="grid">
