--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,35 +1,45 @@
-.cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 300px;
-  height: 300px;
-  padding: 20px;
-  border-radius: 16px;
-  background: #f7f4f4;
+// .cards {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: space-evenly;
+//   width: 300px;
+//   height: 300px;
+//   padding: 20px;
+//   border-radius: 16px;
+//   background: #f7f4f4;
+//   font-family: 'Hind Siliguri', sans-serif;
+//   color: gray;
+//   transition: 150ms linear;
+//   letter-spacing: 2px;
+
+
+//   &:hover {
+//    text-decoration: none;
+//    width: 305px;
+//    height: 305px;
+//   }
+// }
+
+// .cards {
+
+//   h2 {
+//     font-family: 'Hind Siliguri', sans-serif;
+//     color: #191919;
+//   }
+// }
+
+.card {
+  padding: 0;
+  margin: 0;
+  border: 1px solid #191919;
+  background-color: #f4f4f4;
+
+}
+
+
+.card-text {
+  color: black;
   font-family: 'Hind Siliguri', sans-serif;
-  color: gray;
-  transition: 150ms linear;
-  letter-spacing: 2px;
-
-
-  &:hover {
-   text-decoration: none;
-   width: 305px;
-   height: 305px;
-  }
-}
-
-.cards {
-
-  h2 {
-    font-family: 'Hind Siliguri', sans-serif;
-    color: #191919;
-  }
-}
-
-.image {
-  height: 70%;
-  border-bottom: 1px solid #191919;
+  text-align: center;
 }
