--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,7 @@
+@import "config/fonts";
+@import "config/colors";
+@import "config/bootstrap_variables";
+
 #background {
   background-size: cover;
   width: 100%;
@@ -11,7 +15,7 @@
   align-items: center;
   border-bottom: 1px solid white;
   width: 100%;
-  background-color: #191919;
+  background-color: $base;
   color: white;
   position: sticky;
   top: 0;
@@ -54,3 +58,13 @@
 
 }
 
+.upload-photo {
+  // border: 1px solid #d3d3d3;
+  border-radius: 8px;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-weight: 500;
+  background: #1b56b7;
+  border-radius: 2px;
+  color: $light-gray;
+}
