--- a/app/assets/stylesheets/doses.scss
+++ b/app/assets/stylesheets/doses.scss
@@ -1,5 +1,10 @@
+@import "config/fonts";
+@import "config/colors";
+@import "config/bootstrap_variables";
+
 #modify {
   margin: 1rem 0;
+  font-size: 100px;
 }
 
 
