--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @cocktail do |f| %>
 <%= f.input :name, class: 'name'%>
-<%= f.input :photo, as: :file, id: 'modify' %>
+<%= f.input :photo, as: :file, input_html: { class: 'd-none' }, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
 <%= f.button :submit, class: 'button' %>
 <% end %>
