--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,7 +6,11 @@
   <% @cocktails.each do |cocktail|%>
     <%= link_to cocktail_path(cocktail) do %>
     <div class="card" style="width: 18rem;">
+    <% if cocktail.photo.attached? %>
   <img class="card-img-top" src="<%= cl_image_path cocktail.photo.key, height: 300, width: 300, crop: :fill %>" alt="Card image cap">
+  <% else %>
+    <img class="card-img-top" src="<%= image_path 'https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2849&q=80', height: 300, width: 300, crop: :fill %>" alt="Card image cap">
+    <% end %>
   <div class="card-body">
     <h2 class="card-text"><%= cocktail.name %></h2>
   </div>
