--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,10 @@
-<%= cl_image_tag @cocktail.photo.key, height: 500, width: 600, crop: :fill %>
-<h1 class="writing"><%= @cocktail.name %></h1>
+<% if @cocktail.photo.attached? %>
+  <%= cl_image_tag @cocktail.photo.key, height: 500, width: 600, crop: :fill %>
+  <% else %>
+    <%= image_tag 'https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2849&q=80', height: 500, width: 600, crop: :fill %>
+  <% end %>
+  <h1 class="writing"><%= @cocktail.name %></h1>
+
 
 <% @cocktail.doses.each do |dose|%>
  <h5 ><%= dose.ingredient.name %> <%= dose.description %> &nbsp &nbsp &nbsp &nbsp
