--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,8 @@
 <%= simple_form_for @cocktail do |f| %>
 <%= f.input :name, class: 'name'%>
+<%#= f.input :photo, input_html: { class: 'hidden', id: 'photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
+
 <%= f.input :photo, as: :file, input_html: { class: 'd-none' }, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
 <%= f.button :submit, class: 'button' %>
 <% end %>
+<%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
