--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -58,13 +58,20 @@
 
 }
 
-.upload-photo {
-  // border: 1px solid #d3d3d3;
-  border-radius: 8px;
-  padding: 8px 16px;
-  cursor: pointer;
-  font-weight: 500;
-  background: #1b56b7;
-  border-radius: 2px;
-  color: $light-gray;
+
+.show-image {
+  margin-top: 1rem;
+}
+
+.cocktail-show {
+  border-top: 1px solid $light-gray;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // text-align: center;
+}
+
+#add-ingredients {
+  width: 200px;
 }
