--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,54 +9,49 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
 @import "cocktails";
 @import "doses";
 
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Yellowtail&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Yellowtail&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;700&display=swap");
 
 // Define fonts for body and headers
-$body-font: 'Yellowtail', cursive;
+$body-font: "Yellowtail", cursive;
 $headers-font: "Nunito", "Helvetica", "sans-serif";
-$button-font:  'Hind Siliguri', sans-serif;
-
-
+$button-font: "Hind Siliguri", sans-serif;
 
 body {
-  background-color: $base;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  // font-family: $body-font;
-  margin: 0;
-  color: $light-gray;
+	background-color: $base;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	// font-family: $body-font;
+	margin: 0;
+	color: $light-gray;
 }
 
 .writing {
-  font-size: 72px;
+	font-size: 72px;
 }
 
 div {
-  margin: 0;
+	margin: 0;
 }
 
 form {
-font-size: 42px;
+	font-size: 42px;
 }
 
 a {
-  // font-family: $body-font;
+	// font-family: $body-font;
 
-  &:hover {
-  text-decoration: none;
-  }
+	&:hover {
+		text-decoration: none;
+	}
 }
-
